[package]
name = "proof_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-verifier = { version = "4.0.0", default-features = false }
sp1-sdk = { version = "4.0.0" }
sp1-zkvm = { version = "4.0.0" }
sp1-build = { version = "4.0.0" }
